# MAILFLOW-AI_MAILING

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  README.es.md  README.md  biome.json  package.json  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: ci.yml
apps/api/: .env  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py
apps/api/app/: __init__.py  config.py  crypto.py  database.py  main.py
apps/api/app/models/: __init__.py  audit_log.py  base.py  email_account.py  llm_provider.py  organization.py  processed_email.py  rules.py
apps/api/app/repositories/: account.py  cycle.py
apps/api/app/services/: cycle.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: test_full_cycle.py
apps/api/tests/unit/: test_account_repository.py  test_crypto.py  test_cycle_helpers.py  test_cycle_repository.py  test_cycle_service.py  test_models.py  test_worker.py
apps/web/: package.json
apps/web/src/app/: layout.tsx  page.tsx
apps/worker/: pyproject.toml
apps/worker/worker/: __init__.py  main.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  PLAN.md
docs/adr/: ADR-001-sqlite-self-host.md  ADR-002-litellm-router.md
docs/superpowers/plans/: 2026-05-09-fase1-core-domain.md  2026-05-11-fase2a-db-worker.md
docs/superpowers/specs/: 2026-05-09-fase1-core-domain-design.md  2026-05-10-fase2a-db-worker-design.md
infrastructure/: docker-compose.dev.yml  greenmail-config.json
infrastructure/docker/: Dockerfile.api
