[project]
name = "mailflow-api"
version = "0.1.0"
description = "MailFlow Core API — FastAPI backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.14",
    "asyncpg>=0.30",
    "aiosqlite>=0.20",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "litellm>=1.55",
    "arq>=0.26",
    "redis>=5.2",
    "imapclient>=3.0",
    "msal>=1.31",
    "google-auth>=2.38",
    "google-auth-oauthlib>=1.2",
    "email-reply-parser>=0.5",
    "beautifulsoup4>=4.12",
    "mailflow-core",
    "cryptography>=43.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]
